--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,10 +16,16 @@ repos:
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
 
-- repo: https://github.com/psf/black
-  rev: 23.7.0
+  # Using this mirror lets us use mypyc-compiled black, which is about 2x faster
+- repo: https://github.com/psf/black-pre-commit-mirror
+  rev: 23.11.0
   hooks:
-    - id: black
+  - id: black
+        # It is recommended to specify the latest version of Python
+        # supported by your project here, or alternatively use
+    # pre-commit's default_language_version, see
+    # https://pre-commit.com/#top_level-default_language_version
+    language_version: python3.11
 
 -   repo: https://github.com/PyCQA/isort
     rev: 5.12.0
@@ -48,13 +54,12 @@ repos:
         args:
         - --fix
     -   id: ruff-format
-        args:
-        - --fix
 
 - repo: local
   hooks:
-  - id: pytest
+  - id: pytest-check
     language: system
-    name: pytest
+    name: pytest-check
     entry: pytest
-    types: [python]
+    pass_filenames: false
+    always_run: true
