--- a/.github/workflows/ci_ruff.yml
+++ b/.github/workflows/ci_ruff.yml
@@ -34,12 +34,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: mypy
-        run: mypy src/
-      - name: pylint
-        run: pylint src/
-      - name: flake8
-        run: flake8 src/
+      - name: Ruff
+        run: ruff check --output-format=github src/
 
   test:
     needs: [lint]
